{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 124,
  "lineage": "ee7bfa06-ea3f-e808-55db-2837bc0bd647",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkInterfaces/jenkins-NIC",
            "ip_configuration": [
              {
                "name": "jenkins-NICconfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/jenkins-publicIP",
                "subnet_id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet"
              }
            ],
            "location": "uksouth",
            "name": "jenkins-NIC",
            "network_security_group_id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "azuretf-resources"
          },
          "depends_on": [
            "azurerm_network_security_group.jenkins",
            "azurerm_public_ip.jenkins",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkInterfaces/wildfly-NIC",
            "ip_configuration": [
              {
                "name": "wildfly-NICconfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/wildfly-publicIP",
                "subnet_id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet"
              }
            ],
            "location": "uksouth",
            "name": "wildfly-NIC",
            "network_security_group_id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/wildfly-NSG",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "azuretf-resources"
          },
          "depends_on": [
            "azurerm_network_security_group.server",
            "azurerm_public_ip.server",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG",
            "location": "uksouth",
            "name": "jenkins-NSG",
            "resource_group_name": "azuretf-resources",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/wildfly-NSG",
            "location": "uksouth",
            "name": "wildfly-NSG",
            "resource_group_name": "azuretf-resources",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jenkins-jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG/securityRules/jenkins",
            "name": "jenkins",
            "network_security_group_name": "jenkins-NSG",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "azuretf-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.jenkins",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jenkins-ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "jenkins-NSG",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "azuretf-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.jenkins",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "server-jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/wildfly-NSG/securityRules/jenkins",
            "name": "jenkins",
            "network_security_group_name": "wildfly-NSG",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "azuretf-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.server",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "server-ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/networkSecurityGroups/wildfly-NSG/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "wildfly-NSG",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "azuretf-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.server",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jp-jenkins-280619100214",
            "fqdn": "jp-jenkins-280619100214.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/jenkins-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "jenkins-publicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "azuretf-resources",
            "sku": "Basic",
            "tags": {
              "environment": "staging"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jp-wildfly-280619100214",
            "fqdn": "jp-wildfly-280619100214.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/publicIPAddresses/wildfly-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "wildfly-publicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "azuretf-resources",
            "sku": "Basic",
            "tags": {
              "environment": "staging"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network/subnets/azuretf-subnet",
            "name": "azuretf-subnet",
            "resource_group_name": "azuretf-resources",
            "virtual_network_name": "azuretf-network"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/32b76927-0592-4411-8f4b-59d2e1c9d7ac/resourceGroups/azuretf-resources/providers/Microsoft.Network/virtualNetworks/azuretf-network",
            "location": "uksouth",
            "name": "azuretf-network",
            "resource_group_name": "azuretf-resources"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}